--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -91,6 +91,7 @@
      <Compile Include="Assets\GoogleMobileAds\Platforms\iOS\MonoPInvokeCallbackAttribute.cs" />
      <Compile Include="Assets\GoogleMobileAds\Platforms\iOS\RewardBasedVideoAdClient.cs" />
      <Compile Include="Assets\GoogleMobileAds\Platforms\iOS\Utils.cs" />
+     <Compile Include="Assets\Scripts\AdMob.cs" />
      <Compile Include="Assets\Scripts\Answer.cs" />
      <Compile Include="Assets\Scripts\AnswerHome.cs" />
      <Compile Include="Assets\Scripts\DestroyByTime.cs" />
